diesel_compile_tests/tests/fail/derive/bad_insertable.stderr
error[E0277]: the trait bound `std::string::String: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:12:5
   |
12 |     id: String,
   |     ^^ the trait `diesel::Expression` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 122 others
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Integer>` for `std::string::String`

error[E0277]: the trait bound `i32: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:13:5
   |
13 |     name: i32,
   |     ^^^^ the trait `diesel::Expression` is not implemented for `i32`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 122 others
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Text>` for `i32`

error[E0277]: the trait bound `std::string::String: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:12:5
   |
12 |     id: String,
   |     ^^ the trait `diesel::Expression` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 122 others
   = note: required because of the requirements on the impl of `diesel::Expression` for `&'insert std::string::String`
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Integer>` for `&'insert std::string::String`

error[E0277]: the trait bound `i32: diesel::Expression` is not satisfied
  --> tests/fail/derive/bad_insertable.rs:13:5
   |
13 |     name: i32,
   |     ^^^^ the trait `diesel::Expression` is not implemented for `i32`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 122 others
   = note: required because of the requirements on the impl of `diesel::Expression` for `&'insert i32`
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Text>` for `&'insert i32`
